--- a/A/Altice/Altice_February2020/ads/OPT_HFC_PFL_Gig_69/160x600/160x600.html
+++ b/A/Altice/Altice_February2020/ads/OPT_HFC_PFL_Gig_69/160x600/160x600.html
@@ -23,8 +23,8 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 300px;
-        height: 250px;
+        width: 160px;
+        height: 600px;
         font-family: Arial,Helvetica,sans-serif;
         color: #fff;
       }
@@ -77,17 +77,17 @@
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-02/300x250_Brand-HFC-Gig.mp4");
+amo.registerAttribute("frameVideo1", "TEXT", "160x600_Brand-HFC-Gig.mp4");
 amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage2","IMAGE","1x1.png");
-amo.registerAttribute("frameImage3","IMAGE","300x250_BackgroundImage_Frame03.jpg");
-amo.registerAttribute("frameImage31","IMAGE","300x250_OPT_Endframe_Frame03.png");
+amo.registerAttribute("frameImage3","IMAGE","160x600_BackgroundImage_Frame03.jpg");
+amo.registerAttribute("frameImage31","IMAGE","160x600_OPT_Endframe_Frame03.png");
 amo.registerAttribute("frameText1","TEXT","More speed for more devices");
 amo.registerAttribute("frameText12","TEXT","Bring every room to life");
-amo.registerAttribute("frameText13","TEXT","<br>with 1 Gig Internet");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 15px;left: 23px;line-height:1.1;'><div style='font-size: 25px;letter-spacing: 0.1px;'>1 Gig Internet</div></div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 40px;left: 101px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 53%;vertical-align: 50%;margin-right: 3px;'>$</sup>69<sup style='font-size: 53%;vertical-align: 50%;margin-left: 3px;'>99</sup></div><div style='font-size: 14px;letter-spacing:-0.1px;position: absolute;top: 40px;left: 93px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 9.8px;margin-top: 1px;position: absolute;top: 22px;left: -91px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText23", "TEXT", "<div style='top: 127px;left: 25px;line-height: 1.3;font-size: 14px;letter-spacing: -0.1px;' class='AlticeRegular'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Up to 940 Mbps</div><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com Gift Card<div style='font-size: 8.3px;margin-top: 2px;margin-left: 11px;'>Restrictions apply.</div></div></div><div class='AlticeRegular' style='position: absolute;top: 183px;left: 24px;font-size: 8.5px;line-height: 1.2;letter-spacing: -0.1px;'>Wired connection.<br>WiFi speeds may vary.</div>");
+amo.registerAttribute("frameText13","TEXT","<br><br>with <font class='AlticeBold'>1 Gig Internet</font>");
+amo.registerAttribute("frameText21", "TEXT", "<div style='top: 22px;left: 8px;line-height:1.1;'><div style='font-size: 21px;'>1 Gig Internet</div></div>");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 130px;left: 14px;line-height:1.1;'><div style='color: #0084d6;font-size: 50px;'><sup style='font-size: 53%;vertical-align: 50%;margin-right: 2px;'>$</sup>69<sup style='font-size: 53%;vertical-align: 50%;margin-left: 3px;'>99</sup></div><div style='font-size: 11px;letter-spacing:-0.1px;position: absolute;top: 34px;left: 76px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 7.85px;margin-top: -4px;position: absolute;top: 22px;left: -74px;'>plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText23", "TEXT", "<div style='top: 211px;left: 11px;line-height: 2.2;font-size: 14px;'><div><span style='color:#0084d6;padding-right: 5px;'>+</span>Up to 940 Mbps</div><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com<div style='margin-top: -16px;margin-left: 14px;'>Gift Card.</div><div style='font-size: 8.6px;margin-top: -8px;margin-left: 14px;'>Restrictions apply.</div></div></div><div class='AlticeRegular' style='position: absolute;top: 464px;left: 14px;font-size: 10.5px;line-height: 1;'>Wired connection.<br>WiFi speeds may vary.</div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -112,11 +112,11 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 127px;left: 25px;
     <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div>
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top: 210px;
-        left: 20px;
-        width: 88px;
-        height: 20px;
-        font-size: 12px;
+      style="top: 553px;
+        left: 26px;
+        width: 100px;
+        height: 23px;
+        font-size: 15px;
         border-radius: 10px;
         color:#fff;">
     </div>
@@ -127,42 +127,45 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 127px;left: 25px;
       background-color:#000;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top:0px;left:0px;width:300px;height:250px;"><video muted playsinline autoplay style="width:100%;"></video></div>
-      <div id="frameText1" class="text-top AlticeBold"
+      <div id="frameVideo1" style="top:0px;left:0px;width:160px;height:600px;"><video muted playsinline autoplay style="width:100%;"></video></div>
+      <div id="frameText1" class="text-top AlticeRegular"
         data-text="frameText1"
-        style="top: 113px;
+        data-style="text-align:center;"
+        style="top: 20px;
           left: 10px;
-          width: 280px;
+          width: 140px;
           height: 50px;
-          font-size: 16.5px;
-          line-height:1.2;">
+          font-size: 23px;
+          line-height: 0.95;">
       </div>
-      <div id="frameText12" class="text-top AlticeBold"
+      <div id="frameText12" class="text-top AlticeRegular"
         data-text="frameText12"
-        style="top: 113px;
+        data-style="text-align:center;"
+        style="top: 24px;
           left: 10px;
-          width: 280px;
+          width: 140px;
           height: 50px;
-          font-size: 16.5px;
-          line-height:1.2;">
+          font-size: 23px;
+          line-height: 0.95;">
       </div>
-      <div id="frameText13" class="text-top AlticeBold"
+      <div id="frameText13" class="text-top AlticeRegular"
         data-text="frameText13"
-        style="top: 113px;
+        data-style="text-align:center;"
+        style="top: 24px;
           left: 10px;
-          width: 280px;
+          width: 140px;
           height: 50px;
-          font-size: 16.5px;
-          line-height:1.2;">
+          font-size: 23px;
+          line-height: 0.95;">
       </div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top: 210px;
-          left: 20px;
-          width: 88px;
-          height: 20px;
-          font-size: 12px;
+        style="top: 553px;
+          left: 26px;
+          width: 100px;
+          height: 23px;
+          font-size: 15px;
           border-radius: 10px;
           color:#fff;">
       </div>
@@ -177,8 +180,8 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 127px;left: 25px;
   <script type="text/javascript">
     var ad = new Ad({
       root: document.querySelector('#ad'),
-      width: 300,
-      height: 250,
+      width: 160,
+      height: 600,
       borderWidth: 1,
       borderColor: '#000'
     });
@@ -187,10 +190,10 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 127px;left: 25px;
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/300x250_Logo_Optimum_White.png',
-          introLogoImage: 'images/300x250_Logo_Optimum_White.png',
+          logoImage: 'images/160x600_Logo_Optimum_White.png',
+          introLogoImage: 'images/160x600_Logo_Optimum_White.png',
           frameBackground: '1x1.png',
-          priceLabel: '300x250_PFL_Image.png',
+          priceLabel: '160x600_PFL_Image.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
@@ -272,7 +275,7 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 127px;left: 25px;
           //   .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           // }
         }
-        gsap.delayedCall(.8, animateFrame1, [true]);
+        gsap.delayedCall(.8, animateFrame1);
       });
     }, 2000);
   </script>
