--- a/A/Altice/Altice_February2020/ads/OPT_HFC_PFL_Gig_69/320x50/320x50_frame2.html
+++ b/A/Altice/Altice_February2020/ads/OPT_HFC_PFL_Gig_69/320x50/320x50_frame2.html
@@ -23,8 +23,8 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 300px;
-        height: 600px;
+        width: 320px;
+        height: 50px;
         font-family: Arial,Helvetica,sans-serif;
         color: #fff;
       }
@@ -77,15 +77,17 @@
   <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1", "TEXT", "300x600_Brand-HFC-Gig.mp4");
 amo.registerAttribute("ctaText","TEXT","Learn more");
 amo.registerAttribute("frameImage2","IMAGE","1x1.png");
+amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameText1","TEXT","More speed for more devices");
-amo.registerAttribute("frameText12","TEXT","Bring every room to life <font style='color:transparent'>with <font class='AlticeBold'>1 Gig Internet</font></font>");
-amo.registerAttribute("frameText13","TEXT","<br><font style='color:transparent;'>to life</font> with <font class='AlticeBold'>1 Gig Internet</font>");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 30px;left: 21px;line-height:1.1;'><div style='font-size: 30px;letter-spacing: 0.6px;'>1 Gig Internet</div></div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 120px;left: 109px;line-height:1.1;'><div style='color: #0084d6;font-size: 66px;'><sup style='font-size: 53%;vertical-align: 55%;margin-right: 3px;'>$</sup>69<sup style='font-size: 53%;vertical-align: 55%;margin-left: 3px;'>99</sup></div><div style='font-size: 15px;letter-spacing:-0.1px;position: absolute;top: 41px;left: 98px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10.2px;margin-top: 2px;position: absolute;top: 22px;left: -95px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText23", "TEXT", "<div style='top: 256px;left: 17px;line-height: 2;font-size: 18px;'><div><span style='color:#0084d6;padding-right: 5px;'>+</span>Up to 940 Mbps</div><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com Gift Card.<div style='font-size: 10.3px;margin-top: -11px;margin-left: 15px;'>Restrictions apply.</div></div></div><div class='AlticeRegular' style='position: absolute;top: 521px;left: 22px;font-size: 9.5px;line-height: 1;'>Wired connection.<br>WiFi speeds may vary.</div>");
+amo.registerAttribute("frameText12","TEXT","Bring every room to life<br>with <font class='AlticeBold'>1 Gig Internet</font>");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 0px;left: 7px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 39px;'><sup style='font-size: 55%;vertical-align: 34%;margin-right: 5px;'>$</sup>100</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top: 17px;left: 96px;line-height: 1.1;font-size: 11.4px;'>Amazon.com Gift Card</div>");
+amo.registerAttribute("frameText23","TEXT","<div class='AlticeRegular' style='top: 30px;left: 96px;line-height: 1;font-size: 7.3px;'>Restrictions apply.</div>");
+amo.registerAttribute("frameText31", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText32", "TEXT", "<div style='top: 4px;left: 57px;line-height:1.1;'><div style='color: #0084d6;font-size: 32px;letter-spacing: -1px;'><sup style='font-size: 55%;vertical-align: 50%;margin-right: 1px;letter-spacing: 0;'>$</sup>69<sup style='font-size: 55%;vertical-align: 50%;margin-left: 3px;'>99</sup></div><div style='font-size: 7px;letter-spacing:-0.1px;position: absolute;top: 20px;left: 48px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 5px;position: absolute;top: 11px;left: -47px;'>plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText33", "TEXT", "<div style='top: 20px;left: 148px;line-height: 1;font-size: 11px;' class='AlticeRegular'><div><span style='color:#0084d6;padding-right: 3px;'>+</span>Up to 940 Mbps</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -107,14 +109,18 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 256px;left: 17px;
     <div id="frameText21" class="frameText">!{frameText21}</div>
     <div id="frameText22" class="frameText">!{frameText22}</div>
     <div id="frameText23" class="frameText">!{frameText23}</div>
+    <div id="frameImage3" class="asset frameImage" data-image="frameImage3"></div>
+    <div id="frameText31" class="frameText">!{frameText31}</div>
+    <div id="frameText32" class="frameText">!{frameText32}</div>
+    <div id="frameText33" class="frameText">!{frameText33}</div>
     <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div>
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top: 560px;
-        left: 23px;
-        width: 100px;
-        height: 23px;
-        font-size: 15px;
+      style="top: 9px;
+        left: 248px;
+        width: 65px;
+        height: 15px;
+        font-size: 9.6px;
         border-radius: 10px;
         color:#fff;">
     </div>
@@ -125,45 +131,33 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 256px;left: 17px;
       background-color:#000;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top:0px;left:0px;width:300px;height:600px;"><video muted playsinline autoplay style="width:100%;"></video></div>
-      <div id="frameText1" class="text-top AlticeRegular"
+      <!-- <div id="frameVideo1" style="top:0px;left:0px;width:320px;height:50px;"><video muted playsinline autoplay style="width:100%;"></video></div> -->
+      <div id="frameText1" class="text-left AlticeRegular"
         data-text="frameText1"
-        data-style="text-align:center;"
-        style="top: 27px;
-          left: 10px;
-          width: 280px;
-          height: 100px;
-          font-size: 31px;
-          line-height: 1;">
+        style="top: 11px;
+          left: 0px;
+          width: 220px;
+          height: 30px;
+          font-size: 13px;
+          line-height: 1.1;">
       </div>
-      <div id="frameText12" class="text-top AlticeRegular"
+      <div id="frameText12" class="text-top-left AlticeRegular"
         data-text="frameText12"
-        data-style="text-align:center;"
-        style="top: 27px;
-          left: 10px;
-          width: 280px;
-          height: 100px;
-          font-size: 31px;
-          line-height: 1;">
-      </div>
-      <div id="frameText13" class="text-top AlticeRegular"
-        data-text="frameText13"
-        data-style="text-align:center;"
-        style="top: 27px;
-          left: 10px;
-          width: 280px;
-          height: 100px;
-          font-size: 31px;
-          line-height: 1;">
+        style="top: 12px;
+          left: -1px;
+          width: 220px;
+          height: 30px;
+          font-size: 13px;
+          line-height: 1.1;">
       </div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top: 560px;
-          left: 23px;
-          width: 100px;
-          height: 23px;
-          font-size: 15px;
+        style="top: 9px;
+          left: 248px;
+          width: 65px;
+          height: 15px;
+          font-size: 9.6px;
           border-radius: 10px;
           color:#fff;">
       </div>
@@ -178,8 +172,8 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 256px;left: 17px;
   <script type="text/javascript">
     var ad = new Ad({
       root: document.querySelector('#ad'),
-      width: 300,
-      height: 600,
+      width: 320,
+      height: 50,
       borderWidth: 1,
       borderColor: '#000'
     });
@@ -188,10 +182,10 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 256px;left: 17px;
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/300x600_Logo_Optimum_White.png',
-          introLogoImage: 'images/300x600_Logo_Optimum_White.png',
+          logoImage: 'images/320x50_Logo_Optimum_White.png',
+          introLogoImage: 'images/320x50_Logo_Optimum_White.png',
           frameBackground: '1x1.png',
-          priceLabel: '300x600_PFL_Image.png',
+          priceLabel: '320x50_PFL_Image.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
@@ -208,12 +202,12 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 256px;left: 17px;
         ad.root.addEventListener("click", function(e) {
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
-        setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
+        // setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
 
         textUpdate();
-        gsap.set('#frameText1,#frameText12,#frameText13', {autoAlpha:0,y:10});
-        gsap.set('.frameImage', {x:'100%'});
-        gsap.set('.frameText, #priceLabel', {x:'-100%'});
+        gsap.set('#frameText1,#frameText12,#frameText13', {autoAlpha:0,x:10});
+        gsap.set('.frameImage, .frameText', {y:'100%'});
+        gsap.set('#priceLabel', {x:'-100%',y:0});
         var priceFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
@@ -241,33 +235,34 @@ amo.registerAttribute("frameText23", "TEXT", "<div style='top: 256px;left: 17px;
           .to('#cta', {delay:-0.3,top: 182,left: 101,width: 94,height: 22,fontSize: 13})
           .from('#frameImage'+frame+'1', {autoAlpha:0,y:'10%'})
         }
-        // var animateFrame3 = function(flag){
-        //   var frameId = 3;
-        //   gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-        //   .to('#frameImage'+frameId, {duration:0, onComplete: endFrameAnimation, onCompleteParams:[3]})
-        //   // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame4}));
-        // }
+        var animateFrame3 = function(flag){
+          var frameId = 3;
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameImage'+frameId, {duration:0, onComplete: priceFrameAnimation, onCompleteParams:[3]})
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame4}));
+        }
         var animateFrame2 = function(flag){
           var frameId = 2;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: priceFrameAnimation, onCompleteParams:[frameId]})
-          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"],#priceLabel', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame3}));
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[frameId]})
+          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame3}));
         }
         var animateFrame1 = function(flag){
-          ad.layers.frameVideo1.querySelector('video').onplay = function(){
+          // ad.layers.frameVideo1.querySelector('video').onplay = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frameText1', {delay:0, autoAlpha:1, y:0})
+            .to('#frameText1', {delay:0.5, autoAlpha:1, y:0})
             .to('#frameText1', {delay:1.7, autoAlpha:0})
             .to('#frameText12', {autoAlpha:1, y:0})
-            .to('#frameText13', {delay:0.5, autoAlpha:1, y:0})
-          }
-          ad.layers.frameVideo1.querySelector('video').ontimeupdate = function(e){
-            if((e.target.duration - e.target.currentTime) <= 0.5 && !frameChangeFlag) {
-              frameChangeFlag = true;
-              gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-              .to('#frame1', (flag==true?{}:{autoAlpha:0, onComplete: animateFrame2}));
-            }
-          }
+            .to('#frame1', (flag==true?{}:{delay:2,autoAlpha:0, onComplete: animateFrame2}));
+          // }
+          // ad.layers.frameVideo1.querySelector('video').ontimeupdate = function(e){
+          //   if((e.target.duration - e.target.currentTime) <= 0.5 && !frameChangeFlag) {
+          //     frameChangeFlag = true;
+          //     gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          //     .to('#frame1', (flag==true?{}:{autoAlpha:0, onComplete: animateFrame2}));
+          //   }
+          // }
+
           // ad.layers.frameVideo1.querySelector('video').onended = function(){
           //   gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           //   .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
